@@ -1,6 +1,9 @@
 # This file is part of Coog. The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
+import datetime
+
 from trytond.pool import PoolMeta
+
 
 __all__ = [
     'Renew',
@@ -17,6 +20,9 @@ class Renew:
         cls._error_messages.update({
                 'must_renew_all': 'All contracts on contract set %s'
                 ' must be renewed together',
+                'should_renew_all': 'All contracts on contract set %s'
+                ' should be renewed together, ensure you want to perform'
+                ' this action',
                 })
 
     @classmethod
@@ -26,8 +32,14 @@ class Renew:
                 active_contracts = [c for c in contract.contract_set.contracts
                     if c.status in ['active', 'hold'] and c.activation_history
                     and not c.activation_history[-1].final_renewal]
+                max_end_date = max([x.end_date or datetime.date.min
+                        for x in active_contracts])
                 if not set(active_contracts).issubset(
                         contracts):
-                    cls.raise_user_error('must_renew_all',
+                    if contract.end_date >= max_end_date:
+                        cls.raise_user_error('must_renew_all',
+                            contract.contract_set.number)
+                    cls.raise_user_warning('should_renew_all_%s' %
+                        contract.contract_set.number, 'should_renew_all',
                         contract.contract_set.number)
         return super(Renew, cls).renew_contracts(contracts)
