@@ -1,3 +1,4 @@
+* BUG#8253 Add possibility to renew only one contract of a contract set
 * BUG#7542 In a contract set if a contract has already a planned termination date Coog must not prevent to renew 
 
 Version 1.14 - 2017-11-09
